[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omenrgb"
version = "0.1.0"
description = "Drive HP Omen 40L case RGB + Kingston Fury DDR5 RAM from Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-2.0-or-later" }
dependencies = [
    "smbus2>=0.4",
    "hid>=1.0.5",  # python-hid binding for hidapi
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["omenrgb*"]
